--- a/ejercicios/ej_python.ipynb
+++ b/ejercicios/ej_python.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ejercicios 2, 4 y 1\n",
+    "\n",
     "## Ejercicios cadenas y listas\n",
     "\n",
     "1. Dada una cadena poner los caracteres con índice par al principio y con índice impar después separador por un guion. Ejemplo \"ABCDEF\" debe dar \"ACE-BDF\"\n",
@@ -17,6 +19,110 @@
     "5. Dadas dos listas de números, crear una única lista que sea la combinación de las dos y ordenada\n",
     "\n",
     "6. Dada una lista, eliminar los elementos de las posiciones pares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cadenas_listas (x):\n",
+    "    y = x.replace(' ','_')\n",
+    "    y1= y[-3].lower()\n",
+    "    y2= y[-2].lower()\n",
+    "    y3= y[-1].lower()\n",
+    "    y = y[0:-3]\n",
+    "    z = y + y1 + y2 + y3\n",
+    "    return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ej_pandas.IPYNB\n",
+      "ej_python.IPYNB\n",
+      "titanic.IPYNB\n",
+      ".IPYNB_CHECKPOINTS\n",
+      "ej_sklearn.IPYNB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "for filename in os.listdir(\".\"):\n",
+    "    l = filename.split(\".\")\n",
+    "    ext = l[1].upper()\n",
+    "    fout = l[0] + \".\" + ext\n",
+    "    print(fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"Foto de vacaciones.JPG\"\n",
+    "\n",
+    "l = filename.split(\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = l[0].replace(\" \", \"_\")\n",
+    "ext = l[1].lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Foto_de_vacaciones.jpg'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base + \".\" + ext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Foto_de_vacaciones.jpg'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadenas_listas(filename)"
    ]
   },
   {
@@ -38,6 +144,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prueba = 'cOche Casa pErRo PerrO cAsA'\n",
+    "\n",
+    "def contar_palabras(prueba):\n",
+    "    res = {}\n",
+    "    for palabra in prueba.split(\" \"):\n",
+    "        palabra = palabra.lower()\n",
+    "        if palabra in res:\n",
+    "            res[palabra] = res[palabra] + 1\n",
+    "        else:\n",
+    "            res[palabra] = 1\n",
+    "    \n",
+    "    return res\n",
+    "\n",
+    "res = contar_palabras(prueba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coche': 1, 'casa': 2, 'perro': 2}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,6 +198,67 @@
     "3. Escribir una función que calcule los números entre 2000 y 3200 (ambos incluidos) que sean divisibles por 7 pero no múltiplos de 5. Los números deben de imprimirse en una única línea, separados por comas.\n",
     "\n",
     "4. Escribir una función que dada cadena compuesta por números separados por comas devuelva una tupla de los números que contiene. Ejemplo: \"5,7,8,9,10,23\" resultado (5, 7, 8, 9, 10, 23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prueba = 'gato,perro,casa,coche'\n",
+    "\n",
+    "l = prueba.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'casa_coche_gato_perro'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_l = sorted(l)\n",
+    "\"_\".join(sorted_l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_l[0] + \",\" + sorted_l[1]"
    ]
   },
   {
@@ -75,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
