--- a/notebook/sklearn/00-intro.ipynb
+++ b/notebook/sklearn/00-intro.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.24.2'"
+       "'1.1.1'"
       ]
      },
      "execution_count": 1,
@@ -59,6 +59,37 @@
     "import sklearn\n",
     "\n",
     "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /home/alberto/miniconda3/lib/python3.9/site-packages (1.1.1)\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.1.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30.8 MB)\n",
+      "\u001b[K     |████████████████████████████████| 30.8 MB 9.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /home/alberto/miniconda3/lib/python3.9/site-packages (from scikit-learn) (1.22.4)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /home/alberto/miniconda3/lib/python3.9/site-packages (from scikit-learn) (1.1.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/alberto/miniconda3/lib/python3.9/site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /home/alberto/miniconda3/lib/python3.9/site-packages (from scikit-learn) (1.8.1)\n",
+      "Installing collected packages: scikit-learn\n",
+      "  Attempting uninstall: scikit-learn\n",
+      "    Found existing installation: scikit-learn 1.1.1\n",
+      "    Uninstalling scikit-learn-1.1.1:\n",
+      "      Successfully uninstalled scikit-learn-1.1.1\n",
+      "Successfully installed scikit-learn-1.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --upgrade scikit-learn"
    ]
   },
   {
@@ -642,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -656,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
