--- a/ejercicios/deepglobe.ipynb
+++ b/ejercicios/deepglobe.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install segmentation-models keras tensorflow"
+    "%pip install segmentation-models keras tensorflow"
    ]
   },
   {
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
