--- a/ejercicios/geochemistry.ipynb
+++ b/ejercicios/geochemistry.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "9ddb4cab",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "00e51111",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "a1b058a6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "7f45d4cf",
    "metadata": {},
    "outputs": [
@@ -70,13 +70,398 @@
        "(1959, 39)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "quest.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9278bcd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MASTERID</th>\n",
+       "      <th>LAT</th>\n",
+       "      <th>LONG</th>\n",
+       "      <th>STRAT</th>\n",
+       "      <th>Ag_ICP_PPB</th>\n",
+       "      <th>Al_ICP_PCT</th>\n",
+       "      <th>As_ICP_PPM</th>\n",
+       "      <th>Ba_ICP_PPM</th>\n",
+       "      <th>Bi_ICP_PPM</th>\n",
+       "      <th>Ca_ICP_PCT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sr_ICP_PPM</th>\n",
+       "      <th>Te_ICP_PPM</th>\n",
+       "      <th>Th_ICP_PPM</th>\n",
+       "      <th>Ti_ICP_PCT</th>\n",
+       "      <th>Tl_ICP_PPM</th>\n",
+       "      <th>U_ICP_PPM</th>\n",
+       "      <th>V_ICP_PPM</th>\n",
+       "      <th>W_ICP_PPM</th>\n",
+       "      <th>Zn_ICP_PPM</th>\n",
+       "      <th>La_ICP_PPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31185</th>\n",
+       "      <td>ID093G071002</td>\n",
+       "      <td>53.61138</td>\n",
+       "      <td>-122.97780</td>\n",
+       "      <td>LTQCh</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>233.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>81.7</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31186</th>\n",
+       "      <td>ID093G071003</td>\n",
+       "      <td>53.62691</td>\n",
+       "      <td>-122.96569</td>\n",
+       "      <td>LTQCh</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31187</th>\n",
+       "      <td>ID093G071004</td>\n",
+       "      <td>53.65023</td>\n",
+       "      <td>-122.98068</td>\n",
+       "      <td>LTQCh</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>111.6</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31188</th>\n",
+       "      <td>ID093G071005</td>\n",
+       "      <td>53.66609</td>\n",
+       "      <td>-123.02010</td>\n",
+       "      <td>LTQCh</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>86.8</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31189</th>\n",
+       "      <td>ID093G071006</td>\n",
+       "      <td>53.63407</td>\n",
+       "      <td>-122.99388</td>\n",
+       "      <td>LTQCh</td>\n",
+       "      <td>340.0</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>205.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43980</th>\n",
+       "      <td>ID093O075043</td>\n",
+       "      <td>55.06867</td>\n",
+       "      <td>-123.11723</td>\n",
+       "      <td>TrJTk</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>122.4</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43981</th>\n",
+       "      <td>ID093O075044</td>\n",
+       "      <td>55.06867</td>\n",
+       "      <td>-123.11723</td>\n",
+       "      <td>TrJTk</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>...</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>115.5</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43982</th>\n",
+       "      <td>ID093O075045</td>\n",
+       "      <td>55.04947</td>\n",
+       "      <td>-123.08231</td>\n",
+       "      <td>CmOKe</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43983</th>\n",
+       "      <td>ID093O075046</td>\n",
+       "      <td>55.06389</td>\n",
+       "      <td>-123.09069</td>\n",
+       "      <td>CmOKe</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td>49.5</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.035</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>79.9</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43984</th>\n",
+       "      <td>ID093O075047</td>\n",
+       "      <td>55.08226</td>\n",
+       "      <td>-123.09563</td>\n",
+       "      <td>CmOKe</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>66.6</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1959 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           MASTERID       LAT       LONG  STRAT  Ag_ICP_PPB  Al_ICP_PCT  \\\n",
+       "31185  ID093G071002  53.61138 -122.97780  LTQCh       320.0        1.48   \n",
+       "31186  ID093G071003  53.62691 -122.96569  LTQCh       220.0        1.05   \n",
+       "31187  ID093G071004  53.65023 -122.98068  LTQCh       360.0        1.22   \n",
+       "31188  ID093G071005  53.66609 -123.02010  LTQCh       500.0        1.60   \n",
+       "31189  ID093G071006  53.63407 -122.99388  LTQCh       340.0        1.76   \n",
+       "...             ...       ...        ...    ...         ...         ...   \n",
+       "43980  ID093O075043  55.06867 -123.11723  TrJTk       360.0        0.60   \n",
+       "43981  ID093O075044  55.06867 -123.11723  TrJTk       380.0        0.63   \n",
+       "43982  ID093O075045  55.04947 -123.08231  CmOKe       140.0        1.10   \n",
+       "43983  ID093O075046  55.06389 -123.09069  CmOKe       160.0        0.95   \n",
+       "43984  ID093O075047  55.08226 -123.09563  CmOKe       240.0        0.61   \n",
+       "\n",
+       "       As_ICP_PPM  Ba_ICP_PPM  Bi_ICP_PPM  Ca_ICP_PCT  ...  Sr_ICP_PPM  \\\n",
+       "31185         8.3       233.5        0.10        0.95  ...        64.0   \n",
+       "31186         1.8       171.0        0.06        1.52  ...       114.0   \n",
+       "31187         6.7       162.0        0.08        0.99  ...        50.5   \n",
+       "31188         7.3       244.0        0.12        0.72  ...        47.5   \n",
+       "31189         4.5       205.5        0.10        0.92  ...        57.0   \n",
+       "...           ...         ...         ...         ...  ...         ...   \n",
+       "43980         7.4        23.5        0.06        2.34  ...        73.5   \n",
+       "43981         6.9        26.0        0.06        2.26  ...        71.5   \n",
+       "43982         5.5        53.0        0.08        1.13  ...        35.0   \n",
+       "43983        10.6        37.5        0.08        1.63  ...        49.5   \n",
+       "43984        43.0        43.0        0.10        3.52  ...        89.5   \n",
+       "\n",
+       "       Te_ICP_PPM  Th_ICP_PPM  Ti_ICP_PCT  Tl_ICP_PPM  U_ICP_PPM  V_ICP_PPM  \\\n",
+       "31185        0.12         2.9       0.040        0.30        7.4       78.0   \n",
+       "31186        0.10         1.3       0.014        0.12        5.5       24.0   \n",
+       "31187        0.06         0.9       0.028        0.12        1.5       36.0   \n",
+       "31188        0.06         0.7       0.029        0.14        1.8       60.0   \n",
+       "31189        0.08         1.7       0.065        0.22        2.9       58.0   \n",
+       "...           ...         ...         ...         ...        ...        ...   \n",
+       "43980        0.06         0.6       0.017        0.10        2.6       24.0   \n",
+       "43981        0.06         0.5       0.019        0.08        1.7       24.0   \n",
+       "43982        0.08         1.1       0.041        0.08        2.6       32.0   \n",
+       "43983        0.06         0.8       0.035        0.08        5.4       36.0   \n",
+       "43984        0.08         1.5       0.020        0.06        2.5       34.0   \n",
+       "\n",
+       "       W_ICP_PPM  Zn_ICP_PPM  La_ICP_PPM  \n",
+       "31185       -0.1        81.7        15.5  \n",
+       "31186       -0.1        21.5        15.5  \n",
+       "31187       -0.1       111.6        11.0  \n",
+       "31188       -0.1        86.8        24.0  \n",
+       "31189       -0.1        99.4        15.0  \n",
+       "...          ...         ...         ...  \n",
+       "43980       -0.1       122.4         3.5  \n",
+       "43981       -0.1       115.5         3.5  \n",
+       "43982       -0.1        77.9         8.0  \n",
+       "43983       -0.1        79.9         6.0  \n",
+       "43984       -0.1        66.6         7.5  \n",
+       "\n",
+       "[1959 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quest"
    ]
   },
   {
