--- a/notebook/sklearn/08-ensemble.ipynb
+++ b/notebook/sklearn/08-ensemble.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "1.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9790209790209791"
+       "0.972027972027972"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -139,12 +139,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_depth': None, 'max_features': 'log2', 'min_samples_split': 2, 'n_estimators': 200}\n",
-      "0.972027972027972\n"
+      "{'max_depth': None, 'max_features': 'sqrt', 'min_samples_split': 3, 'n_estimators': 100}\n",
+      "0.9790209790209791\n",
+      "CPU times: user 46 s, sys: 16.5 ms, total: 46 s\n",
+      "Wall time: 46 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -787,7 +790,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -801,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
